[package]
name = "eb"
description = "A command executor exercising exponential backoff"
edition = "2018"
version = "0.3.5"
authors = ["Kristofer Rye <kristofer.rye@gmail.com>"]
license = "GPL-3.0-only"

repository = "https://github.com/rye/eb"
readme = "README.md"
keywords = ["cli", "exponential", "backoff", "tool"]
categories = ["command-line-utilities"]

[badges]
is-it-maintained-issue-resolution = { repository = "rye/eb" }
is-it-maintained-open-issues = { repository = "rye/eb" }
maintenance = { status = "actively-developed" }

[features]
default = []

[dependencies]
clap = { version = "2.33.1", default-features = false, features = ["suggestions", "color"] }
simple_logger = { version = "1.6.0", optional = true }
log = "0.4.8"
rand = "0.7.3"
