[package]
name = "eb"
description = "A command executor exercising exponential backoff"
edition = "2021"
version = "0.5.0"
rust-version = "1.57"
authors = ["Kristofer Rye <kristofer.rye@gmail.com>"]
license = "GPL-3.0-only"

repository = "https://github.com/rye/eb"
readme = "README.md"
keywords = ["cli", "exponential", "backoff", "tool"]
categories = ["command-line-utilities"]

[badges]
is-it-maintained-issue-resolution = { repository = "rye/eb" }
is-it-maintained-open-issues = { repository = "rye/eb" }
maintenance = { status = "actively-developed" }

[features]
default = []

[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = ["std", "suggestions", "color"] }
simple_logger = { version = "5", optional = true }
log = "0.4.20"
rand = "0.9.0"
thiserror = "2"
